# fastapi-ml-model-server

./: Dockerfile  README.md  about_server.ipynb  main.py  pyproject.toml  task_4.ipynb
.ipynb_checkpoints/: about_server-checkpoint.ipynb  docker-compose-checkpoint.yml  requirements-checkpoint.txt
saved_models/: lgbm.joblib
server/: client.ipynb  config.py  main.py  settings.env
server/.ipynb_checkpoints/: client-checkpoint.ipynb  config_models-checkpoint.py  main-checkpoint.py  test-checkpoint.ipynb
