[project]
name = "task-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "catboost>=1.2.8",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.40.0",
    "xgboost>=3.1.3",
]
